--- a/LatticeOptics/latticeOpticsV2.tex
+++ b/LatticeOptics/latticeOpticsV2.tex
@@ -47,7 +47,7 @@
 \newcommand\TrapFreq{\ensuremath{\nu_t}}
 \newcommand\RecoilEnergy{\ensuremath{E_\mathrm{rec}}}
 
-
+\graphicspath{{./figures/}}
 \begin{document}
 
 \title{Design and Implementation of Stable High Power Optical Lattices for Quantum Gas Microscopy}
@@ -72,6 +72,10 @@ For example, in experiments at low temperatures, heating due to the intensity no
 Similarly, experiments that rely on a small number of atoms held by multiple traps places stringent requirements on the relative stability of the traps.
 We demonstrate a high power lattice system that exhibits levels of intensity noise below -120 dBc between 1 kHz and 3 MHz, and is positionally stable at the XXX site level. 
 This system has been successfully used in a Fermi gas microscope to investigate the charge and spin sectors of the Hubbard model with unprecedented control. 
+\begin{figure}
+    \includegraphics{figures/figure1/figure1.pdf}
+    \caption{High level overview showing the major components of the lattice laser feedback system}
+\end{figure}
 
 
 \section{High level Overview}
