New RIN data Mephisto MOPA 55W, updated Fig3

--- a/LatticeOptics/latticeOpticsV4.tex
+++ b/LatticeOptics/latticeOpticsV4.tex
@@ -63,7 +63,7 @@
 \end{abstract}
 \maketitle
 
-Optical lattices holding an array of ultracold atoms have become a powerful experimental platform for a wide variety of investigations into various forms of quantum simulation \cite{Friedenauer2008, Kim2010, Struck2011, Simon2011, Yan2013, Drewes2016, Murmann2015}.%, strongly correlated systems, quantum state engineering, quantum computing and precision metrology.
+Optical lattices holding an array of ultracold atoms have become a powerful experimental platform for a wide variety of investigations into various forms of quantum simulation \cite{Friedenauer2008, Kim2010, Struck2011, Simon2011, Yan2013, Drewes2016, Murmann2015}. %, strongly correlated systems, quantum state engineering, quantum computing and precision metrology.
 Further, the recent advent of quantum gas microscopy~\cite{Bakr2009, Sherson2010, Haller2015, Cheuk2015, Parsons2015, Edge2015, Omran2015, Greif2016, Cheuk2016, Parsons2016, Boll2016, Cheuk2016a, Brown2016} has enabled studies that exhibit unprecedented control over few atom systems at extremely low energy scales, particularly those governed by the Hubbard Hamiltonian ~\cite{Hubbard1963}.
 However, this progress has placed ever more stringent technical constraints on the lasers used to trap and manipulate the atomic systems.
 For example, heating due to the intensity noise cannot be allowed to approach the longest thermalization timescales, lest the system fail to thermalize~\cite{Savard1997}.
@@ -131,7 +131,7 @@ The rise of the noise floor as a function of the pump diode current can be seen 
 \begin{figure*}
   \begin{center}
     \includegraphics{fig/fig3_combined.pdf}
-    \caption{\textbf{Laser noise of the lattice system.} (a) Shows the laser noise of unmodified Nufern fiber amplifiers and the Mephisto seed. (b) Shows the open (OL) and closed (CL) loop behavior of the high power feedback loop. (c) Shows open loop behavior of the low power feedback loop after making the modifications. (d) Closed loop behavior of the loop system without additional filtering, measured on the same setup as (c).}\label{fig:noises}
+    \caption{\textbf{Laser noise of the lattice system.} (a) Shows the laser noise of unmodified Nufern fiber amplifiers and the Mephisto seed, as well as an independent Mephisto MOPA 55W (not used for the optical lattice presented in this manuscript). (b) Shows the open (OL) and closed (CL) loop behavior of the high power feedback loop. (c) Shows open loop behavior of the low power feedback loop after making the modifications. (d) Closed loop behavior of the loop system without additional filtering, measured on the same setup as (c).}\label{fig:noises}
   \end{center}
 \end{figure*}
 
