--- a/LatticeOptics/LatticeOpticsV4.bib
+++ b/LatticeOptics/LatticeOpticsV4.bib
@@ -1368,7 +1368,7 @@ volume = {235},
 year = {1987}
 }
 @article{Comin2015,
-author = {Comin, R. and Sutarto, R. and He, F. and {da Silva Neto}, E. H. and Chauviere, L. and Fra{\~{n}}o, A. and Liang, R. and Hardy, W. N. and Bonn, D. A. and Yoshida, Y. and Eisaki, H. and Achkar, A. J. and Hawthorn, D. G. and Keimer, B. and Sawatzky, G. A. and Damascelli, A.},
+author = {Comin, R. and Sutarto, R. and He, F. and {da Silva Neto}, E. H. and Chauviere, L. and Fra{\~{n}}o, A. and Liang, R. and Hardy, W. N. and Bonn, D. A. and Yoshida, Y. and Eisaki, H. and Achkar, A. J. and Hawthorn, D. G. and Keimer, B. and Sawatzky, G. A. and Damascelli, A.},
 doi = {10.1038/nmat4295},
 issn = {1476-1122},
 journal = {Nature Materials},
@@ -2095,18 +2095,15 @@ volume = {6},
 year = {1989}
 }
 @article{Mazurenko2016,
-abstract = {Many exotic phenomena in strongly correlated electron systems emerge from the interplay between spin and motional degrees of freedom. For example, doping an antiferromagnet gives rise to interesting phases including pseudogap states and high-temperature superconductors. A promising route towards achieving a complete understanding of these materials begins with analytic and computational analysis of simplified models. Quantum simulation has recently emerged as a complementary approach towards understanding these models. Ultracold fermions in optical lattices offer the potential to answer open questions on the low-temperature regime of the doped Hubbard model, which is thought to capture essential aspects of the cuprate superconductor phase diagram but is numerically intractable in that parameter regime. A new perspective is afforded by quantum gas microscopy of fermions, which allows readout of magnetic correlations at the site-resolved level. Here we report the realization of an antiferromagnet in a repulsively interacting Fermi gas on a 2D square lattice of approximately 80 sites. Using site-resolved imaging, we detect (finite-size) antiferromagnetic long-range order (LRO) through the development of a peak in the spin structure factor and the divergence of the correlation length that reaches the size of the system. At our lowest temperature of T/t = 0.25(2) we find strong order across the entire sample. Our experimental platform enables doping away from half filling, where pseudogap states and stripe ordering are expected, but theoretical methods become numerically intractable. In this regime we find that the antiferromagnetic LRO persists to hole dopings of about 15{\%}, providing a guideline for computational methods. Our results demonstrate that quantum gas microscopy of ultracold fermions in optical lattices can now address open questions on the low-temperature Hubbard model.},
-archivePrefix = {arXiv},
-arxivId = {1612.08436},
-author = {Mazurenko, Anton and Chiu, Christie S. and Ji, Geoffrey and Parsons, Maxwell F. and Kan{\'{a}}sz-Nagy, M{\'{a}}rton and Schmidt, Richard and Grusdt, Fabian and Demler, Eugene and Greif, Daniel and Greiner, Markus},
-eprint = {1612.08436},
-file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Mazurenko et al. - 2016 - Experimental realization of a long-range antiferromagnet in the Hubbard model with ultracold atoms.pdf:pdf},
-journal = {arXiv},
-month = {dec},
-number = {1612.08436},
-title = {{Experimental realization of a long-range antiferromagnet in the Hubbard model with ultracold atoms}},
-url = {http://arxiv.org/abs/1612.08436},
-year = {2016}
+abstract = {Exotic phenomena in systems with strongly correlated electrons emerge from the interplay between spin and motional degrees of freedom. For example, doping an antiferromagnet is expected to give rise to pseudogap states and high-temperature superconductors 1 . Quantum simulation 2–8 using ultracold fermions in optical lattices could help to answer open questions about the doped Hubbard Hamiltonian 9–14 , and has recently been advanced by quantum gas microscopy 15–20 . Here we report the realization of an antiferromagnet in a repulsively interacting Fermi gas on a two-dimensional square lattice of about 80 sites at a temperature of 0.25 times the tunnelling energy. The antiferromagnetic long-range order manifests through the divergence of the correlation length, which reaches the size of the system, the development of a peak in the spin structure factor and a staggered magnetization that is close to the ground-state value. We hole-dope the system away from half-filling, towards a regime in which complex many-body states are expected, and find that strong magnetic correlations persist at the antiferromagnetic ordering vector up to dopings of about 15 per cent. In this regime, numerical simulations are challenging 21 and so experiments provide a valuable benchmark. Our results demonstrate that microscopy of cold atoms in optical lattices can help us to understand the low-temperature Fermi–Hubbard model.},
+author = {Mazurenko, Anton and Chiu, Christie S and Ji, Geoffrey and Parsons, Maxwell F and Kan{\'{a}}sz-Nagy, M{\'{a}}rton and Schmidt, Richard and Grusdt, Fabian and Demler, Eugene and Greif, Daniel and Greiner, Markus},
+doi = {10.1038/nature22362},
+file = {:Users/cschiu/Library/Application Support/Mendeley Desktop/Downloaded/Mazurenko et al. - 2017 - A cold-atom Fermi–Hubbard antiferromagnet(2).pdf:pdf},
+journal = {Nature},
+pages = {462--6},
+title = {{A cold-atom Fermi–Hubbard antiferromagnet}},
+volume = {545},
+year = {2017}
 }
 @article{Kaufman2012a,
 author = {Kaufman, A. M. and Lester, B. J. and Regal, C. A.},
